--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "express": "^4.19.2",
     "express-validator": "^7.3.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.9.0"
+    "mysql2": "^3.9.0",
+    "@supabase/supabase-js": "^2.80.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
